--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
 		      start: 509,
 		      playsinline: 1
 		    },
+		    events: {
+		      onReady: function(e) {
+		        e.target.play();
+		      }
+		    }
 		  });
 		 } 
 		</script>
