--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!--<meta http-equiv="Pragma" content="no-cache">-->
+	<meta http-equiv="Pragma" content="no-cache">
 	<title>Curling &amp; Enya</title>
 	<style type="text/css">
 		@supports not (-webkit-overflow-scrolling: touch) {
