--- a/index.html
+++ b/index.html
@@ -1,37 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
+
 <head>
-	<meta http-equiv="Pragma" content="no-cache">
-	<title>Curling &amp; Enya</title>
-	<style type="text/css">
-		@supports not (-webkit-overflow-scrolling: touch) {
-			/* CSS for other than iOS devices */
-			.ios-only {
-				display:none
-			} 
-		}
-		body {
-			background-color: #ccc;
-			font-family: Helvetica, Arial, sans-serif;
-			font-weight: 100
-		}
-		h1 {
-			font-family: Georgia, Times, serif;
-			font-size: 4em;
-			font-style: italic;
-			font-weight: 100
-		}
-		p {
-			font-size: 2em
-		}
-		div.wrapper {
-			text-align: center
-		}
-	</style>
+  <meta charset="UTF-8">
+  <title>Curling &amp; Enya</title>  
+      <link rel="stylesheet" href="css/style.css"> 
 </head>
-<body class="color-normal">
-	<div class="wrapper">
-		<h1>Curling &amp; Enya</h1>
-		<iframe src="https://player.vimeo.com/video/256596708?autoplay=1&loop=1&autopause=0" width="854" height="480" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-	</div>
+<body>
+  <div class="fullscreen">
+  	<div class="video">
+   	 <div class="wrapper">
+      	<iframe src="//player.vimeo.com/video/25659670?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script  src="js/index.js"></script>
 </body>
+</html>
