--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="fullscreen">
   	<div class="video">
    	 <div class="wrapper">
-      	<iframe src="//player.vimeo.com/video/256596708?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+      	<iframe src="//player.vimeo.com/video/256596708?autoplay=1&loop=1&autopause=0&title=0&byline=0&portrait=0" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
   </div>
 </div>
