--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" >
-
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114510622-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114510622-1');
+</script>
   <meta charset="UTF-8">
   <title>Curling &amp; Enya</title>  
-      <link rel="stylesheet" href="css/style.css"> 
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <div class="fullscreen">
