--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   gtag('config', 'UA-114510622-1');
 </script>
   <meta charset="UTF-8">
-  <title>Curling &amp; Enya</title>  
+  <title>Curling & Enya</title>  
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
